--- a/quarterFinals.html
+++ b/quarterFinals.html
@@ -1,328 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cuartos de Final</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <link rel="stylesheet" href="styles.css" />
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-lg-3 col-12"></div>
-        <div class="col-lg-6 col-12 text-center">
-          <h1 class="mt-4">Cuartos de final</h1>
-          <button
-            onclick="handleModal('modal', 1)"
-            id="player_1"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 1
-          </button>
-          <button
-            onclick="handleModal('modal', 2)"
-            id="player_2"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 2
-          </button>
-          <button
-            onclick="handleModal('modal', 3)"
-            id="player_3"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 3
-          </button>
-          <button
-            onclick="handleModal('modal', 4)"
-            id="player_4"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 4
-          </button>
-          <button
-            onclick="handleModal('modal', 5)"
-            id="player_5"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 5
-          </button>
-          <button
-            onclick="handleModal('modal', 6)"
-            id="player_6"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 6
-          </button>
-          <button
-            onclick="handleModal('modal', 7)"
-            id="player_7"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 7
-          </button>
-          <button
-            onclick="handleModal('modal', 8)"
-            id="player_8"
-            class="btn btn-primary mt-3 w-50"
-          >
-            Player 8
-          </button>
-        </div>
-        <div class="col-lg-3 col-12"></div>
-      </div>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Cuartos de Final</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body>
+		<link rel="stylesheet" href="styles.css" />
+		<div class="container mt-5">
+			<div class="row">
+				<div class="col-lg-3 col-12"></div>
+				<div class="col-lg-6 col-12 text-center">
+					<h1 class="mt-4">Cuartos de final</h1>
+					<button
+						onclick="handleModal('modal', 1)"
+						id="player_1"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 1
+					</button>
+					<button
+						onclick="handleModal('modal', 2)"
+						id="player_2"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 2
+					</button>
+					<button
+						onclick="handleModal('modal', 3)"
+						id="player_3"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 3
+					</button>
+					<button
+						onclick="handleModal('modal', 4)"
+						id="player_4"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 4
+					</button>
+					<button
+						onclick="handleModal('modal', 5)"
+						id="player_5"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 5
+					</button>
+					<button
+						onclick="handleModal('modal', 6)"
+						id="player_6"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 6
+					</button>
+					<button
+						onclick="handleModal('modal', 7)"
+						id="player_7"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 7
+					</button>
+					<button
+						onclick="handleModal('modal', 8)"
+						id="player_8"
+						class="btn btn-primary mt-3 w-50"
+					>
+						Player 8
+					</button>
+				</div>
+				<div class="col-lg-3 col-12"></div>
+			</div>
+		</div>
 
-    <!-- MODAL ALL PLAYERS -->
-    <div class="container-fluid modalCont" id="modal">
-      <div class="row modalBox">
-        <div class="col-12 text-center">Player 1</div>
-        <div class="col-4">
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 1:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h1"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 2:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h2"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 3:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h3"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 4:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h4"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 5:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h5"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 6:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h6"
-            />
-          </div>
-        </div>
-        <div class="col-4">
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 7:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h7"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 8:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h8"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 9:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h9"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 10:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h10"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 11:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h11"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 12:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h12"
-            />
-          </div>
-        </div>
-        <div class="col-4">
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 13:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h13"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 14:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h14"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 15:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h15"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 16:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h16"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 17:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h17"
-            />
-          </div>
-          <div style="display: flex; margin-top: 1em">
-            <p class="mx-2">Hoyo 18:</p>
-            <input
-              class="w-25"
-              style="height: 2rem"
-              type="text"
-              name=""
-              id="h18"
-            />
-          </div>
-        </div>
-        <div class="col-12 text-center">
-          <button id="cuartos_finishButton" class="w-25 mt-4">
-            Cargar Score
-          </button>
-          <button
-            onclick="handleModal('modal')"
-            id="closeButton"
-            class="w-25 mt-4"
-          >
-            Cerrar
-          </button>
-        </div>
-      </div>
-    </div>
+		<!-- MODAL ALL PLAYERS -->
+		<div class="container-fluid modalCont" id="modal">
+			<div class="row modalBox">
+				<div class="col-12 text-center">Player 1</div>
+				<div class="col-4">
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 1:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 2:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 3:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 4:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 5:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 6:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+				</div>
+				<div class="col-4">
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 7:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 8:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 9:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 10:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 11:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 12:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+				</div>
+				<div class="col-4">
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 13:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 14:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 15:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 16:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 17:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+					<div style="display: flex; margin-top: 1em">
+						<p class="mx-2">Hoyo 18:</p>
+						<input class="w-25" style="height: 2rem" type="text" name="" />
+					</div>
+				</div>
+				<div class="col-12 text-center">
+					<button id="cuartos_finishButton" class="w-25 mt-4">
+						Cargar Score
+					</button>
+					<button
+						onclick="handleModal('modal')"
+						id="closeButton"
+						class="w-25 mt-4"
+					>
+						Cerrar
+					</button>
+				</div>
+			</div>
+		</div>
 
-    <script>
-      let handleModal = (id, number) => {
-        let modal = document.getElementById(id);
-        if (modal.style.display === "none") {
-          modal.style.display = "block";
-        } else {
-          modal.style.display = "none";
-        }
-      };
-    </script>
+		<script>
+			let handleModal = (id, playerNumber) => {
+				let modal = document.getElementById(id);
+				let inputs = modal.querySelectorAll("input");
 
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
-      import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
-      import { firebaseConfig } from "./firebaseConfig.js";
+				// Cambia los IDs de los inputs según el jugador seleccionado
+				inputs.forEach((input, index) => {
+					input.id = `h${index + 1}_player${playerNumber}`;
+				});
 
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth(app);
-      const db = getFirestore(app);
+				// Actualiza el título del modal para reflejar el jugador seleccionado
+				let title = modal.querySelector(".col-12.text-center");
+				title.textContent = `Player ${playerNumber}`;
 
-      // Make auth and db available globally
-      window.auth = auth;
-      window.db = db;
-    </script>
+				// Alterna la visibilidad del modal
+				if (modal.style.display === "none" || modal.style.display === "") {
+					modal.style.display = "block";
+				} else {
+					modal.style.display = "none";
+				}
+			};
+		</script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-    <script type="module" src="players.js"></script>
-    <script type="module" src="tournamentManagment.js"></script>
-    <script type="module" src="fetchPlayers.js"></script>
-  </body>
+		<script type="module">
+			import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+			import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
+			import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
+			import { firebaseConfig } from "./firebaseConfig.js";
+
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig);
+			const auth = getAuth(app);
+			const db = getFirestore(app);
+
+			// Make auth and db available globally
+			window.auth = auth;
+			window.db = db;
+		</script>
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+			crossorigin="anonymous"
+		></script>
+		<script type="module" src="players.js"></script>
+		<script type="module" src="tournamentManagment.js"></script>
+		<script type="module" src="fetchPlayers.js"></script>
+	</body>
 </html>
