--- a/tournamentManagment.html
+++ b/tournamentManagment.html
@@ -15,11 +15,11 @@
 	</head>
 	<body>
 		<link rel="stylesheet" href="styles.css" />
-		<div class="continer">
+		<div class="continer mt-5">
 			<div class="row">
 				<div class="col-12 col-lg-3"></div>
 				<div class="col-12 col-lg-6 text-center box">
-					<h1 class="mt-5">Tournament Managment</h1>
+					<h1 class="">Tournament Managment</h1>
 
 					<label class="mt-3">Tournament Name: </label>
 					<span id="tournamentName">Loading...</span>
